# lippy

./: .gitignore  LICENSE  README.md  install_dependencies.sh  project_setup.py  pyproject.toml  requirements.txt  setup.py  testing_req.txt
data/db/chroma/: chroma-collections.parquet  chroma-embeddings.parquet
data/vault/2 - Notes/: WQM 1019 - Basic Water Quality Analysis.md  WQM 1019 - Basic Water Quality Analysis.sync-conflict-20230405-122214-MS2SNZ5.md  WQM 1019 - R - Activated Sludge Plants & NPDES.md  WQM 1019 - R - Color, Taste, Odor, Langeliers.md  WQM 1019 - R - DO Temp Cl2 Residual Hybrid.md  WQM 1019 - R - DO, Temp, Micros, pH, Turbidity.md  WQM 1019 - R - Nutrients, Data Reporting, and Monitoring.md  WQM 1019 - R - Sampling Basics & Lab Equipment for Wastewater.md  WQM 1019 - R - Solids & MLSS & TSS.md  chroma-embeddings.parquet  (+9 more)
example/Bark/: bark_test.py
lippy/: main.py
lippy/usage_examples/: bark_test.py  generating_audiobook.ipynb  proof_reader.py  transcribe_audio.py  transcribe_yt.py
lippy/utils/: book_reader.py  falcon_llm.py  listener.py  listener_via_api.py  misc.py  next_meeting_tool.py  obsidian_loader.py  speaker.py  vector_store.py  yt_to_mp3.py
src/lippy/: sandbox.ipynb
voices/: Dalinar-0_4_drama_queen.npz  Dalinar-0_t5_w7_5.npz  Dalinar-1_2.npz  Dalinar-1_t6_w8_8.npz  Dalinar-1_t8_w8_7.npz  Dalinar-4_3_old.npz  Dalinar-4_t7_w7_6.npz  Dalinar_seed-2.npz  StormFather-0_t8_w6_1_not_my_father.npz  StormFather-0_t8_w8_3_gravelly_accent.npz  StormFather-1_t8_w6_whhipped_cream.npz  StormFather-1_t8_w8_bond_james.npz  StormFather_seed-1.npz
(+17 files in other folders)
