[tool.poetry]
name = "lippy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
ipykernel = "^6.26.0"
beautifulsoup4 = "^4.12.2"
numpy = "^1.26.1"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
